--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(cpp_laser_maze)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(cpp_laser_maze ../src/main.cpp)
+add_executable(cpp_laser_maze
+    src/main.cpp
+    src/Menu.cpp
+    src/Menu.h)
