set up project directory for game logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,14 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(cpp_laser_maze
     src/main.cpp
-    src/Menu.cpp
-    src/Menu.h
-    src/MainMenu.cpp
-    src/MainMenu.h)
+    src/menus/Menu.cpp
+    src/menus/Menu.h
+    src/menus/MainMenu.cpp
+    src/menus/MainMenu.h
+    src/utils/MazeGenerator.cpp
+    src/utils/MazeGenerator.h
+    src/pieces/Piece.cpp
+    src/pieces/Piece.h
+    src/utils/Maze.cpp
+    src/utils/Maze.h
+)
