--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.27)
 project(cpp_laser_maze)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 
 add_executable(cpp_laser_maze
     src/main.cpp
